<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/askMail"
            android:textColor="@android:color/white"
            android:layout_marginBottom="30dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_login_recover_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:hint="@string/mail"
            android:singleLine="true"
            android:layout_marginBottom="15dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:drawableRight="@mipmap/icono_mail"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/edit_text_rounded_corner"/>

        <Button
            android:id="@+id/bt_login_recover_send"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/send"
            android:textColor="@android:color/holo_blue_dark"
            android:background="@drawable/button_rounded_corner_white"/>

    </LinearLayout>

</RelativeLayout>
