<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:orientation="vertical">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:src="@drawable/logo"
                    android:layout_marginBottom="30dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"/>

                <EditText
                    android:id="@+id/et_login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="center_vertical"
                    android:hint="@string/user"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/edit_text_rounded_corner"
                    android:drawableRight="@mipmap/icono_usuario"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"/>

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/edit_text_rounded_corner"
                    android:drawableRight="@mipmap/icono_pass"
                    android:paddingRight="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"/>


                <Button
                    android:id="@+id/bt_login_enter_account"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    android:text="@string/enter"
                    android:textColor="@android:color/holo_blue_dark"
                    android:background="@drawable/button_rounded_corner_white"/>

                <Button
                    android:id="@+id/bt_login_missed_password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="40dp"
                    android:textSize="14sp"
                    android:text="@string/missedPass"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:background="@android:color/transparent"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
